# CustomLib

./: CMakeLists.txt  README.md  camera.cpp  camera.hpp  colors.hpp  cube.cpp  cube.hpp  linear_algebra.h  main.cpp  render.cpp  render.hpp  shapes.hpp  utils.cpp  utils.hpp
